Adding generic css and js files to test pathing and script stuff.

--- a/card.html
+++ b/card.html
@@ -1,8 +1,16 @@
 <html>
     <head>
         <title>Test</title>
+
+        <!-- STYLING -->
+        <link rel="stylesheet" href="/css/reset.css">
+        <link rel="stylesheet" href="/css/global.css">
     </head>
     <body>
         TEST!!! CARDERERER!
+        <script src="/js/test.js"></script>
+        <script>
+            test('the test real nice');
+        </script>
     </body>
 </html>
