Added Doodle scripts, 'nocanvas'/'noscript' CSS files, and shapes html.

--- a/card/index.html
+++ b/card/index.html
@@ -1,16 +1,15 @@
 <html>
     <head>
-        <title>Test</title>
+        <title>Doodle Bark - Card</title>
 
         <!-- STYLING -->
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/global.css">
     </head>
     <body>
-        TEST!!! CARDERERER!
-        <script src="/js/test.js"></script>
-        <script>
-            test('the test real nice');
-        </script>
+        <div id="main"></div>
+        
+        <script defer src="/js/doodle.js"></script>
+        <script defer src="/js/doodle.js"></script>
     </body>
 </html>
