--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <html>
     <head>
-        <title>Test</title>
+        <title>Doodle Bark</title>
 
         <!-- STYLING -->
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/global.css">
     </head>
     <body>
-        TEST!!! INDEXXX!!!!!!
-        <script src="/js/test.js"></script>
-        <script>
-            test('this for the index');
-        </script>
+        <noscript>
+            <link rel="stylesheet" href="/css/noscript.css">
+
+            <div id="noscript">
+                <div class="content">
+                    <h2>
+                        Javascript Disabled
+                    </h2>
+                    <p>
+                        Looks like you've got javascript disabled. Sadly, this website does not work without javascript. 
+                    </p>
+                </div>
+            </div>
+        </noscript>
+
+
+
+        <div id="main">
+            <div class="navbar">
+            </div>
+        </div>
     </body>
 </html>
