Accidentally dupe-referenced the 'doodle.js' script. Changed it back to 'canvas.js'.

--- a/card/index.html
+++ b/card/index.html
@@ -10,6 +10,6 @@
         <div id="main"></div>
         
         <script defer src="/js/doodle.js"></script>
-        <script defer src="/js/doodle.js"></script>
+        <script defer src="/js/canvas.js"></script>
     </body>
 </html>
