--- a/card/shapes/index.html
+++ b/card/shapes/index.html
@@ -4,6 +4,6 @@
     </head>
     <body>
         <script defer src="/js/doodle.js"></script>
-        <script defer src="/js/doodle.js"></script>
+        <script defer src="/js/canvas.js"></script>
     </body>
 </html>
