Referenced scripts up one folder. Fixed.

--- a/card/index.html
+++ b/card/index.html
@@ -9,7 +9,7 @@
     <body>
         <div id="main"></div>
         
-        <script defer src="/js/doodle.js"></script>
-        <script defer src="/js/canvas.js"></script>
+        <script defer src="/js/doodle/doodle.js"></script>
+        <script defer src="/js/doodle/canvas.js"></script>
     </body>
 </html>
