--- a/card/shapes/index.html
+++ b/card/shapes/index.html
@@ -3,7 +3,7 @@
         <title>Doodle Bark - Shapes</title>
     </head>
     <body>
-        <script defer src="/js/doodle.js"></script>
-        <script defer src="/js/canvas.js"></script>
+        <script defer src="/js/doodle/doodle.js"></script>
+        <script defer src="/js/doodle/canvas.js"></script>
     </body>
 </html>
