im so tired. added request script reference to html filessssss.

--- a/card/index.html
+++ b/card/index.html
@@ -5,6 +5,9 @@
         <!-- STYLING -->
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/global.css">
+
+        <!-- SCRIPTS -->
+        <script defer src="/js/util/request.js"></script>
     </head>
     <body>
         <div id="main"></div>
