--- a/card/shapes/index.html
+++ b/card/shapes/index.html
@@ -1,6 +1,9 @@
 <html>
     <head>
         <title>Doodle Bark - Shapes</title>
+
+        <!-- SCRIPTS -->
+        <script defer src="/js/util/request.js"></script>
     </head>
     <body>
         <script defer src="/js/doodle/doodle.js"></script>
